--- a/app/views/rentals/search.html.erb
+++ b/app/views/rentals/search.html.erb
@@ -11,6 +11,7 @@
 				<th><%= Rental.human_attribute_name(:end_date) %></th>
 				<th><%= Rental.human_attribute_name(:customer) %></th>
 				<th><%= Rental.human_attribute_name(:car_category) %></th>
+				<th>Status:</th>
 				<th></th>
 				<th></th>
 			</tr>
@@ -22,6 +23,7 @@
 				<td><%= @rental.car_category.name %></td>
 				<td><%= @rental.start_date && localize(@rental.start_date) %></td>
 				<td><%= @rental.end_date && localize(@rental.end_date) %></td>
+				<td><%= Rental.human_attribute_name("status.#{@rental.status}") %></td>
 				<td class="link-start-rental"><%= link_to 'Iniciar', new_rental_car_rental_path(@rental) %></td>
 				<td class="link-editar"><%= link_to 'Editar', edit_rental_path(@rental), id: "edit-#{@rental.id}" %></td>
 				<td class="link-excluir"><%= link_to 'Excluir', rental_path(@rental), method: :delete, id: "delete-#{@rental.id}" %></td>		
