--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     	<nav class="menu">
 		<div class="logo"><%= image_tag("logo.png", size: "100x100", alt: "Logo")%></div>
-		<% if user_signed_in? %>
+		<% if user_signed_in? or current_admin%>
 				
 					<li><%= link_to 'Home', root_path%></li>
 				
