--- a/app/views/manufacturers/show.html.erb
+++ b/app/views/manufacturers/show.html.erb
@@ -4,8 +4,10 @@
 
 	<h1 class="title-manufacturer"><%= @manufacturer.name %></h1>
 
-	<div class="buttons-manufacturer">
-		<p class="link-editar"><%= link_to 'Editar', edit_manufacturer_path(@manufacturer)%></p>
-		<p class="link-excluir"><%= link_to 'Excluir', manufacturer_path(@manufacturer), :data => { :confirm => "Are you sure?" }, method: :delete %></p>
-	</div>
+	<% if @user.admin? %>
+		<div class="buttons-manufacturer">
+			<p class="link-editar"><%= link_to 'Editar', edit_manufacturer_path(@manufacturer)%></p>
+			<p class="link-excluir"><%= link_to 'Excluir', manufacturer_path(@manufacturer), :data => { :confirm => "Are you sure?" }, method: :delete %></p>
+		</div>
+	<% end %>
 </div>
