--- a/app/views/subsidiaries/index.html.erb
+++ b/app/views/subsidiaries/index.html.erb
@@ -2,8 +2,10 @@
 
 <div class="customers-div">
 	<h1>Filiais</h1>
-
-	<h3><%= link_to 'Cadastrar uma filial', new_subsidiary_path%></h3>
+	
+	<% if @user.admin? %>
+		<h3><%= link_to 'Cadastrar uma filial', new_subsidiary_path%></h3>
+	<% end %>
 
 	<% if @subsidiaries.empty? %>
 		<%= 'Nenhuma filial cadastrada' %>
