--- a/app/views/car_categories/index.html.erb
+++ b/app/views/car_categories/index.html.erb
@@ -3,7 +3,9 @@
 <div class="customers-div">
 	<h1>Categorias de Carros</h1>
 
-	<h3><%= link_to 'Registrar nova Categoria', new_car_category_path %></h3>
+	<% if @user.admin? %>
+		<h3><%= link_to 'Registrar nova Categoria', new_car_category_path %></h3>
+	<% end %>
 
 	<% if @car_categories.empty? %>
 		<%= 'Nenhuma categoria cadastrada' %>
