--- a/app/views/car_categories/show.html.erb
+++ b/app/views/car_categories/show.html.erb
@@ -18,8 +18,11 @@
 			<td><%= number_to_currency @car_category.daily_rate %></td>
 			<td><%= number_to_currency @car_category.car_insurance %></td>
 			<td><%= number_to_currency @car_category.third_part_insurance %></td>
-			<td class="link-editar"><%= link_to 'Editar', edit_car_category_path(@car_category) %></td>
-			<td class="link-excluir"><%= link_to 'Excluir', car_category_path(id: @car_category.id), method: :delete %></td>
+
+			<% if @user.admin? %>
+				<td class="link-editar"><%= link_to 'Editar', edit_car_category_path(@car_category) %></td>
+				<td class="link-excluir"><%= link_to 'Excluir', car_category_path(id: @car_category.id), method: :delete %></td>
+			<% end %>
 		</tr>
 	</tbody>
 </table>
