--- a/app/views/car_models/index.html.erb
+++ b/app/views/car_models/index.html.erb
@@ -3,7 +3,7 @@
 <div class="customers-div">
 	<h1>Modelos de Carros</h1>
 
-	<% if @user.admin? %>
+	<% if current_user.admin? %>
 		<h3><%= link_to 'Registrar novo modelo ', new_car_model_path %></h3>
 	<% end %>
 
