--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -3,7 +3,7 @@
 <div class="customers-div">
 	<h1>Carros Cadastrados</h1>
 
-	<% if @user.admin? %>
+	<% if current_user.admin? %>
 		<h3><%= link_to 'Registrar novo carro', new_car_path%></h3>
 	<% end %>
 
