--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -3,7 +3,7 @@
 <div class="customers-div">
 	<h1>Fabricantes</h1>
 	
-	<% if @user.admin? %>
+	<% if current_user.admin? %>
 		<h3><%= link_to 'Registrar novo fabricante', new_manufacturer_path %></h3>
 	<% end %>	
 
