--- a/app/views/subsidiaries/show.html.erb
+++ b/app/views/subsidiaries/show.html.erb
@@ -11,7 +11,7 @@
 			<p><%= @subsidiary.address %></p>
 	</div>
 
-	<% if @user.admin? %>
+	<% if current_user.admin? %>
 		<div class="buttons-manufacturer">
 			<p class="link-editar"><%= link_to 'Editar', edit_subsidiary_path(@subsidiary)%></p>
 			<p class="link-excluir"><%= link_to 'Excluir', subsidiary_path(@subsidiary), method: :delete %></p>
