Envio de email e encerramento de locacao

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -200,6 +200,11 @@ td {
 	font-size: 30px;
 } 	
 
+/*Para deixar alguma info em vermelho*/
+.alert-red {
+	color: red;
+}
+
 /*Desktop*/
 @media screen and (min-width: 1000px) {
 	/*Entrar*/
