--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -2,6 +2,7 @@
 
 <div class="form-session">
 	<h1>Nova locação</h1>
+	<h3>Preencha o formulário abaixo para agendar uma locação</h3>
 
 	<%= render "form" %>
 </div>
