--- a/app/views/rentals/_search_field.html.erb
+++ b/app/views/rentals/_search_field.html.erb
@@ -1,6 +1,6 @@
 <div class="field-seach">
 
-	<p class="inst-seach">Pesquise por uma locação a partir do codigo para agendá-la</p>
+	<p class="inst-seach">Pesquise por um codigo para iniciar a locação</p>
 	<%= form_with url: search_rentals_path, method: :get, local: true do |f| %>
 		<%= f.label :q, 'Código' %>
 		<%= f.text_field :q%>
