User consegue ver carros disponiveis/indisponiveis e escolher apenas os disponiveis ao iniciar locacao

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -205,6 +205,12 @@ td {
 	color: red;
 }
 
+/*Para deixar alguma info em verde*/
+.alert-green {
+	color: #32cd32;
+}
+
+
 /*Desktop*/
 @media screen and (min-width: 1000px) {
 	/*Entrar*/
