Associando filiais aos usuarios

--- a/app/views/car_rentals/new.html.erb
+++ b/app/views/car_rentals/new.html.erb
@@ -11,7 +11,7 @@
 		</div>
 
 		<div class="field">
-			<%= f.label :add_on_id, 'Acessorios' %>
+			<%= f.label :add_on_id, 'Acessório' %>
 			<%= f.collection_select :add_on_id, @add_ons, :id, :name %>
 		</div>
 
