--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,29 +2,34 @@
 	<h2 class="title">Registre uma conta</h2>
 
 	<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-	  <%= render "devise/shared/error_messages", resource: resource %>
+		<%= render "devise/shared/error_messages", resource: resource %>
 
-	  <div class="field">
-	    <%= f.label :email %><br />
-	    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-	  </div>
+		<div class="field">
+			<%= f.label :subsidiary %>
+			<%= f.collection_select :subsidiary, Subsidiary.all, :id, :name %>
+		</div>
 
-	  <div class="field">
-	    <%= f.label :password %>
-	    <% if @minimum_password_length %>
-	    <em>(<%= @minimum_password_length %> characters minimum)</em>
-	    <% end %><br />
-	    <%= f.password_field :password, autocomplete: "new-password" %>
-	  </div>
+		<div class="field">
+			<%= f.label :email %><br />
+			<%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+		</div>
 
-	  <div class="field">
-	    <%= f.label :password_confirmation %><br />
-	    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-	  </div>
+		<div class="field">
+			<%= f.label :password %>
+			<% if @minimum_password_length %>
+			<em>(<%= @minimum_password_length %> é o minimo de caracteres necessários)</em>
+	    		<% end %><br />
+	    		<%= f.password_field :password, autocomplete: "new-password" %>
+	 	</div>
 
-	  <div class="actions">
-	    <button type="submit" >Cadastrar-me</button>
-	  </div>
+	  	<div class="field">
+	    		<%= f.label :password_confirmation %><br />
+	   		<%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+	  	</div>
+
+	  	<div class="actions">
+	    		<button type="submit" >Cadastrar-me</button>
+	  	</div>
 	<% end %>
 
 	<%= render "devise/shared/links" %>
