Escrevendo TDD e CRUD para acessorios. Apenas admin pode geri-los

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
 						<li><%= link_to 'Modelos de Carros', car_models_path%></li>
 						<li><%= link_to 'Categorias de Carros', car_categories_path%></li>
 						<li><%= link_to 'Carros das Frotas', cars_path%></li>
+						<li><%= link_to 'Lista de Acessórios', add_ons_path%></li>
 					</div>
 				</div>
 				<li class="li-sair"><%= link_to 'Sair', destroy_user_session_path, method: :delete%></li>
