Instalando pg no projeto

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,7 @@
 .dropdown button {
 	width: 150%;
 	text-align: center;
-	background-color: #11c76f;
+	background-color: rgb(50, 86, 161);
 	border-color: transparent;
 	height: 30px;
 	border-radius: 25px;
